--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -76,7 +76,7 @@
             {
                 <button type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
             }
-            <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+            <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">返回</button>
         </div>
     </form>
 </div>
