--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -88,5 +88,5 @@
     <partial name="_NowPageMySalesPartial" />
 </div>
 @section topCSS{
-    <link href="~/css/seller/mysales.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/css/buyer/mysales.css" asp-append-version="true" rel="stylesheet" />
 }
