--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -18,7 +18,7 @@
         <div>
             <button type="submit" name="Status" class="btn btn-outline-success disable-onbeforeunload" value="已上架"><i class="bi bi-save"></i> 儲存並上架</button>
             <button type="submit" name="Status" class="btn btn-outline-primary disable-onbeforeunload" value="未上架"><i class="bi bi-save"></i> 儲存並下架</button>
-            <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
+            <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">返回</button>
         </div>
     </form>
 </div>
