--- a/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
@@ -60,72 +60,92 @@
             </div>
         </a>
     </div>
-    <div class="d-flex justify-content-between flex-wrap">
-        @if (Model.Products.Count > 0)
-        {
-            @foreach (var item in Model.Products)
-            {
-                <div class="p-2 product-card my-1">
-                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                    </div>
-                    <div class="container-fluid my-2">
-                        <h2 title="@item.Title">@item.Title</h2>
-                        <h3>@item.Trade</h3>
-                        @if (item.Trade.Contains("買賣"))
-                        {
-                            <h3>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h3>
-                        }else
-                        {
-                            <h3>&nbsp;</h3>
-                        }
-                        <p><span>@Html.DisplayNameFor(model => model.Product.ISBN) </span><span>@item.ISBN</span></p>
-                        <p><span>@Html.DisplayNameFor(model => model.Product.Author) </span><span>@item.Author</span></p>
-                    </div>
-                    <div class="d-flex justify-content-around align-items-center">
-                        <a href="@Url.Action("Details", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3"><i class="bi bi-info-circle"></i> 詳情</a>
-                        @if (item.Status == "已上架" || item.Status == "未上架")
-                        {
-                            <a href="@Url.Action("Edit", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-warning p-3"><i class="bi bi-pencil-square"></i> 編輯</a>
-                        }
-                        @if (item.Status == "未上架")
-                        {
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-outline-danger p-3" data-toggle="modal" data-target="#staticBackdrop">
-                                <i class="bi bi-trash"></i> 刪除
-                            </button>
+    <div class="sexyborder">
+        <table class="fancytable">
+            <thead>
+                <tr class="headerrow"><td style="width: 150px;">圖片封面</td><td>書名</td><td style="width: 150px;">價格</td><td style="width: 100px;">操作</td></tr>
+            </thead>
+            <tbody>
+                @if (Model.Products.Count > 0)
+                {
+                    @foreach (var item in Model.Products)
+                    {
+                        <tr>
+                            <td>
+                                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                                </div>
+                            </td>
+                            <td>
+                                <h2 title="@item.Title" class="text-left">@item.Title</h2>
+                            </td>
+                            <td>
+                                @if (item.Trade.Contains("買賣"))
+                                {
+                                    <h3>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h3>
+                                }
+                                else
+                                {
+                                    <h3>&nbsp;</h3>
+                                }
+                            </td>
+                            <td>
+                                <a href="@Url.Action("Details", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 詳情</a>
+                                @if (item.Status == "已上架" || item.Status == "未上架")
+                                {
+                                    <a href="@Url.Action("Edit", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-warning p-3 my-1"><i class="bi bi-pencil-square"></i> 編輯</a>
+                                }
+                                @if (item.Status == "未上架")
+                                {
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-outline-danger p-3 my-1" data-toggle="modal" data-target="#staticBackdrop">
+                                        <i class="bi bi-trash"></i> 刪除
+                                    </button>
 
-                            <!-- Modal -->
-                            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            確認移至刪除區?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">取消</button>
-                                            <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-outline-danger"><i class="bi bi-trash"></i> 刪除</a>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    確認移至刪除區?
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">返回</button>
+                                                    <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-outline-danger"><i class="bi bi-trash"></i> 刪除</a>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
+                                }
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td>
+                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                                <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="Empty" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                             </div>
-                        }
-                    </div>
-                </div>
-            }
-        }
-        else
-        {
-            <div class="p-2 d-flex align-items-center product-card my-1">
-                <h2 class="my-5">沒有商品在列表中</h2>
-            </div>
-        }
+                        </td>
+                        <td>
+                            <h2 title="沒有商品在列表中" class="text-left">沒有商品在列表中</h2>
+                        </td>
+                        <td>
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
     <partial name="_NowPageMyProductsPartial" />
 </div>
