--- a/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
@@ -8,53 +8,70 @@
 }
 <div class="container-fluid">
     <h1>買賣訂單詳情</h1>
-    <div class="d-flex">
-        <div class="w-50">
-            <h2 class="text-center">賣家的商品 @Model.SellerName</h2>
-            <div class="p-2 product-card my-1">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                </div>
-                <div class="container-fluid my-2">
-                    <h2>@Model.SellerTitle</h2>
-                    <h3>@Model.Trade</h3>
-                    <h3>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h3>
-                    <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
-                    <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
-                </div>
-                <div class="action d-flex justify-content-around align-items-center">
-                    <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-outline-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
-                </div>
-            </div>
-        </div>
-        <div class="w-50">
-            <h2>@Model.Trade - <span>@Model.Status</span></h2>
-            <h2>購買者 - <span>@Model.BuyerName</span></h2>
-            <h2>@Html.DisplayNameFor(model => model.DenyReason)</h2>
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center my-1">
-                <p>@Model.DenyReason</p>
-            </div>
-            <div class="d-flex">
-                @if (Model.Status == "待確認")
-                {
-                    <form action="~/Seller/OrderDetails" method="post">
-                        <input type="hidden" name="OrderId" value="@Model.OrderId">
-                        <input type="hidden" name="trade" value="@Model.Trade">
-                        <button type="submit" class="btn btn-outline-primary mr-2" name="submit" value="接受交易">接受交易</button>
-                        <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="拒絕交易">拒絕交易</button>
-                    </form>
-                }
-                @if (Model.Status == "待取消")
-                {
-                    <form action="~/Seller/OrderDetails" method="post">
-                        <input type="hidden" name="OrderId" value="@Model.OrderId">
-                        <input type="hidden" name="trade" value="@Model.Trade">
-                        <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
-                    </form>
-                }
-                <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
-            </div>
-        </div>
+    <div class="sexyborder">
+        <table class="fancytable">
+            <thead>
+                <tr class="headerrow"><td style="width: 150px;">購買者</td><td style="width: 150px;">圖片封面</td><td>書名</td><td style="width: 150px;">價格</td><td style="width: 150px;">操作</td></tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <h2 class="text-left">@Model.BuyerName</h2>
+                    </td>
+                    <td>
+                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        </div>
+                    </td>
+                    <td>
+                        <h2 title="@Model.SellerTitle" class="text-left">@Model.SellerTitle</h2>
+                    </td>
+                    <td>
+                        <h3>&nbsp;</h3>
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="sexyborder">
+        <table class="fancytable">
+            <thead>
+                <tr class="headerrow"><td style="width: 150px;">訂單狀態</td><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td style="width: 150px;">操作</td></tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <h2 class="text-left">@Model.Status</h2>
+                    </td>
+                    <td>
+                        @Model.DenyReason
+                    </td>
+                    <td>
+                        @if (Model.Status == "待確認")
+                        {
+                            <form action="~/Seller/OrderDetails" method="post">
+                                <input type="hidden" name="OrderId" value="@Model.OrderId">
+                                <input type="hidden" name="trade" value="@Model.Trade">
+                                <button type="submit" class="btn btn-outline-primary p-3 my-1" name="submit" value="接受交易">接受交易</button>
+                                <button type="submit" class="btn btn-outline-danger p-3 my-1" name="submit" value="拒絕交易">拒絕交易</button>
+                            </form>
+                        }
+                        @if (Model.Status == "待取消")
+                        {
+                            <form action="~/Seller/OrderDetails" method="post">
+                                <input type="hidden" name="OrderId" value="@Model.OrderId">
+                                <input type="hidden" name="trade" value="@Model.Trade">
+                                <button type="submit" class="btn btn-outline-danger p-3 my-1" name="submit" value="取消訂單">取消訂單</button>
+                            </form>
+                        }
+                        <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload p-3 my-1">返回</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 @section topCSS{
