--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MyProducts.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MyProducts.css
@@ -1,51 +1,4 @@
-﻿.product-card {
-    border: 2px solid #ffd700;
-    border-radius: 15px;
-    background-color: #232323;
-    width: 300px;
-    height: 575px;
-    margin-left: auto;
-    margin-right: auto;
-}
-    .product-card > div > h2 {
-        color: white;
-        height: 76.8px;
-        overflow: hidden;
-    }
-    .product-card > div > p:nth-of-type(2) {
-        overflow: hidden;
-        height: 48px;
-    }
-    .product-card > div > h3, .product-card > div > p > span, .product-card > h2 {
-        color: white;
-        overflow: hidden;
-    }
-.product-shop-card {
-    border: 2px solid #ffd700;
-    border-radius: 15px;
-    background-color: #232323;
-    width: 300px;
-    height: 320px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-    .product-shop-card > div > h2 {
-        color: white;
-        height: 76.8px;
-        overflow: hidden;
-    }
-
-    .product-shop-card > div > p:nth-of-type(2) {
-        overflow: hidden;
-        height: 48px;
-    }
-
-    .product-shop-card > div > h3, .product-shop-card > div > p > span, .product-shop-card > h2 {
-        color: white;
-        overflow: hidden;
-    }
-@media (min-width:576px) {
+﻿@media (min-width:576px) {
 }
 @media (min-width:768px) {
 }
@@ -160,4 +113,50 @@
         .btn-status-custom:hover span:last-child {
             transform: translateY(-32px);
         }
+/**/
+/**/
+.fancytable {
+    border: 1px solid #cccccc;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+    .fancytable td {
+        border: 1px solid #cccccc;
+        color: #555555;
+        text-align: center;
+        line-height: 28px;
+    }
+
+.headerrow {
+    background-color: #0066cc;
+}
+
+    .headerrow td {
+        color: #ffffff;
+        text-align: center;
+    }
+
+.fancytable > tbody:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+.fancytable > tbody:nth-child(even) {
+    background-color: #efefef;
+}
+
+.fancytable > tbody:nth-child(odd) td {
+    background-color: #ffffff;
+}
+
+    .fancytable > tbody:nth-child(even) td {
+        background-color: #efefef;
+    }
+.sexyborder {
+    border: 1px solid #0066cc;
+    padding: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
 /**/
