--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/Index.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/Index.css
@@ -6,134 +6,26 @@
 }
 @media (min-width:1200px) {
 }
-.btn-outline-info {
-    background-color: white;
-    color: blue;
-}
-.btn-outline-warning {
-    background-color: white;
-    color: orangered;
-}
-.btn-outline-danger {
-    background-color: white;
-    color: red;
-}
-/**/
-.btn-status-custom {
-    position: relative;
-    min-width: 200px;
-    background: #FFFFFF;
-    border: 2px solid #3AD2D0;
-    transform: translate3d(0px, 0%, 0px);
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    transition-delay: 0.6s;
-    overflow: hidden;
-    padding: 10px 20px;
-}
-
-    .btn-status-custom:before,
-    .btn-status-custom:after {
-        content: '';
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        transition: all 0.6s ease;
-    }
-
-    .btn-status-custom:before {
-        background: #3AD2D0;
-        border-radius: 50% 50% 0 0;
-        transform: translateY(100%) scaleY(0.5);
-    }
-
-    .btn-status-custom:after {
-        background: #FFFFFF;
-        border-radius: 0;
-        transform: translateY(0) scaleY(1);
-    }
-
-    .btn-status-custom div {
-        position: relative;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 32px;
-        text-transform: uppercase;
-        overflow: hidden;
-    }
-
-    .btn-status-custom span {
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        width: 100%;
-        z-index: 1;
-        text-align: center;
-        transition: transform 0.5s ease;
-    }
-
-        .btn-status-custom span:first-child {
-            color: #FFFFFF;
-            transform: translateY(24px);
-        }
-
-        .btn-status-custom span:last-child {
-            color: #1E0F21;
-            transform: translateY(0);
-        }
-
-    .btn-status-custom:hover {
-        background: #3AD2D0;
-        transition: background 0.2s linear;
-        transition-delay: 0.6s;
-        color: #FFFFFF;
-    }
-
-        .btn-status-custom:hover:after {
-            border-radius: 0 0 50% 50%;
-            transform: translateY(-100%) scaleY(0.5);
-            transition-delay: 0;
-        }
-
-        .btn-status-custom:hover:before {
-            border-radius: 0;
-            transform: translateY(0) scaleY(1);
-            transition-delay: 0;
-        }
-
-        .btn-status-custom:hover span:first-child {
-            transform: translateY(0);
-        }
-
-        .btn-status-custom:hover span:last-child {
-            transform: translateY(-32px);
-        }
-/**/
 /**/
 .fancytable {
-    border: 1px solid #cccccc;
+    border: 1px solid #8B451350;
     width: 100%;
     border-collapse: collapse;
 }
 
     .fancytable td {
-        border: 1px solid #cccccc;
+        border: 1px solid #8B451350;
         color: #555555;
         text-align: center;
         line-height: 28px;
     }
 
 .headerrow {
-    background-color: #0066cc;
+    background-color: #8B451350;
 }
 
     .headerrow td {
-        color: #ffffff;
+        color: black;
         text-align: center;
         height: 75px;
     }
@@ -159,7 +51,7 @@
     font-size: 24px;
 }
 .sexyborder {
-    border: 1px solid #0066cc;
+    border: 1px solid #8B451350;
     padding: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
