--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -4,35 +4,37 @@
     ViewData["Title"] = $"{(ViewBag.Trade == "交換" ? "交換" : "買賣")}賣場";
 }
 <div class="container-fluid">
-    <h1>@(ViewBag.Trade == "交換" ? "交換" : "買賣")賣場</h1>
-    <div class="d-flex flex-wrap">
+    <h1 style="background-color: #92705A; border-radius: 15px 15px 0 0; width: 170px; margin-bottom: 0; text-align: center;">@(ViewBag.Trade == "交換" ? "交換" : "買賣")賣場</h1>
+    <div class="row p-2" style="background-color: #92705A; border-radius: 0 15px 15px 15px;">
         @if (Model.Products.Count > 0)
         {
             @foreach (var item in Model.Products)
             {
-                <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="p-2 product-shop-card my-1 text-decoration-none">
-                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                <div class="col-2 mt-4">
+                    <div class="product-shop-card m-auto">
+                        <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="p-2 text-decoration-none">
+                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: #A0522D50;">
+                                <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                            </div>
+                            <div class="container-fluid my-2">
+                                <p title="@item.Title">@item.Title</p>
+                                @if (ViewBag.Trade == "買賣")
+                                {
+                                    <p>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</p>
+                                }
+                                else
+                                {
+                                    <p>&nbsp;</p>
+                                }
+                            </div>
+                        </a>
                     </div>
-                    <div class="container-fluid my-2">
-                        <p title="@item.Title">@item.Title</p>
-                        @if (ViewBag.Trade == "買賣")
-                        {
-                            <h3>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h3>
-                        }
-                        else
-                        {
-                            <h3>&nbsp;</h3>
-                        }
-                    </div>
-                </a>
+                </div>
             }
         }
         else
         {
-            <div class="p-2 product-shop-card d-flex justify-content-center align-items-center">
-                <h2 class="my-5">沒有上架的商品</h2>
-            </div>
+            <h2 class="my-5 text-center w-100" style="color:white;">沒有上架的商品</h2>
         }
     </div>
 </div>
