--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -71,10 +71,10 @@
                                 </div>
                             </td>
                             <td>
-                                <h2 title="@item.SellerTitle" class="text-left">@item.SellerTitle</h2>
+                                <p title="@item.SellerTitle" class="text-left">@item.SellerTitle</p>
                             </td>
                             <td>
-                                <h3>NT$@(decimal.Round(item.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(item.SellerUnitPrice, 0))</h3>
+                                <p>NT$@(decimal.Round(item.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(item.SellerUnitPrice, 0))</p>
                             </td>
                             <td>
                                 <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 商品詳情</a>
@@ -94,7 +94,7 @@
                                 </div>
                             </td>
                             <td>
-                                <h2 title="@item.SellerTitle" class="text-left">@item.SellerTitle</h2>
+                                <p title="@item.SellerTitle" class="text-left">@item.SellerTitle</p>
                             </td>
                             <td>
                                 <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 商品詳情</a>
@@ -112,10 +112,13 @@
                             </div>
                         </td>
                         <td>
-                            <h2 title="沒有訂單在列表中" class="text-left">沒有訂單在列表中</h2>
+                            <p title="沒有訂單在列表中" class="text-left">沒有訂單在列表中</p>
                         </td>
-                        <td>
-                        </td>
+                        @if (ViewBag.Trade == "買賣")
+                        {
+                            <td>
+                            </td>
+                        }
                         <td>
                         </td>
                     </tr>
