--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MyProducts.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MyProducts.css
@@ -18,12 +18,16 @@
     background-color: white;
     color: red;
 }
+.btn-outline-secondary {
+    background-color: white;
+    color: gray;
+}
 /**/
 .btn-status-custom {
     position: relative;
     min-width: 200px;
     background: #FFFFFF;
-    border: 2px solid #3AD2D0;
+    border: 2px solid #8B451350;
     transform: translate3d(0px, 0%, 0px);
     font-size: 1rem;
     font-weight: bold;
@@ -46,7 +50,7 @@
     }
 
     .btn-status-custom:before {
-        background: #3AD2D0;
+        background: #8B451350;
         border-radius: 50% 50% 0 0;
         transform: translateY(100%) scaleY(0.5);
     }
@@ -88,7 +92,7 @@
         }
 
     .btn-status-custom:hover {
-        background: #3AD2D0;
+        background: #8B451350;
         transition: background 0.2s linear;
         transition-delay: 0.6s;
         color: #FFFFFF;
@@ -113,27 +117,30 @@
         .btn-status-custom:hover span:last-child {
             transform: translateY(-32px);
         }
+        .btn-status-custom:hover span:first-child {
+            color: black;
+        }
 /**/
 /**/
 .fancytable {
-    border: 1px solid #cccccc;
+    border: 1px solid #8B451350;
     width: 100%;
     border-collapse: collapse;
 }
 
     .fancytable td {
-        border: 1px solid #cccccc;
+        border: 1px solid #8B451350;
         color: #555555;
         text-align: center;
         line-height: 28px;
     }
 
 .headerrow {
-    background-color: #0066cc;
+    background-color: #8B451350;
 }
 
     .headerrow td {
-        color: #ffffff;
+        color: black;
         text-align: center;
     }
 
@@ -152,8 +159,11 @@
     .fancytable > tbody:nth-child(even) td {
         background-color: #efefef;
     }
+.fancytable > tbody > tr > td > p {
+    font-size: 16px;
+}
 .sexyborder {
-    border: 1px solid #0066cc;
+    border: 1px solid #8B451350;
     padding: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
