--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
@@ -5,34 +5,40 @@
 }
 <div class="container-fluid">
     <h1 class="mt-4" style="background-color: #92705A; border-radius: 15px 15px 0 0; width: 170px; margin-bottom: 0; text-align: center;">搜尋商品</h1>
-    <h2 style="background-color: #92705A; margin-bottom: 0; color:white;">@ViewBag.Count</h2>
-    <div class="d-flex flex-wrap" style="background-color: #92705A; border-radius: 0 0 15px 15px;">
-        @if (Model.Products.Count > 0)
-        {
-            @foreach (var item in Model.Products)
+    <h2 style="background-color: #92705A; margin-bottom: 0; color:white; border-radius: 0 15px 0 0;">@ViewBag.Count</h2>
+    <div class="p-2" style="background-color: #92705A; border-radius: 0 0 15px 15px;">
+        <div class="row">
+            @if (Model.Products.Count > 0)
             {
-                <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="p-2 product-shop-card my-1 text-decoration-none">
-                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                @foreach (var item in Model.Products)
+                {
+                    <div class="col-3 col-xl-2 mt-4">
+                        <div class="product-shop-card m-auto">
+                            <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="p-2 text-decoration-none">
+                                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: #A0522D50;">
+                                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                                </div>
+                                <div class="container-fluid my-2">
+                                    <p title="@item.Title">@item.Title</p>
+                                    @if (ViewBag.Trade == "買賣")
+                                    {
+                                        <p>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</p>
+                                    }
+                                    else
+                                    {
+                                        <p>&nbsp;</p>
+                                    }
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                    <div class="container-fluid my-2">
-                        <p title="@item.Title">@item.Title</p>
-                        @if (item.Trade.Contains("買賣"))
-                        {
-                            <p>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</p>
-                        }
-                        else
-                        {
-                            <p>&nbsp;</p>
-                        }
-                    </div>
-                </a>
+                }
             }
-        }
-        else
-        {
-            <h2 class="my-5 text-center w-100" style="color:white;">沒有符合的商品</h2>
-        }
+            else
+            {
+                <h2 class="my-5 text-center w-100" style="color:white;">沒有符合的商品</h2>
+            }
+        </div>
     </div>
 </div>
    
