--- a/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
@@ -97,62 +97,65 @@
             </tbody>
         </table>
     </div>
-    <h3 class="my-1">下拉畫面選擇要交換的書籍</h3>
-    <h3 class="my-1">對方已上架書籍</h3>
-    <div class="sexyborder">
-        <table class="fancytable">
-            <thead>
-                <tr class="headerrow"><td style="width: 150px;">圖片封面</td><td>書名</td><td style="width: 150px;">操作</td></tr>
-            </thead>
-            <tbody>
-                @if (Model.Products.Count > 0 && Model.Status == "待確認")
-                {
-                    @foreach (var item in Model.Products)
+    @if(Model.Status == "待確認")
+    {
+        <h3 class="my-1">下拉畫面選擇要交換的書籍</h3>
+        <h3 class="my-1">對方已上架書籍</h3>
+        <div class="sexyborder">
+            <table class="fancytable">
+                <thead>
+                    <tr class="headerrow"><td style="width: 150px;">圖片封面</td><td>書名</td><td style="width: 150px;">操作</td></tr>
+                </thead>
+                <tbody>
+                    @if (Model.Products.Count > 0)
+                    {
+                        @foreach (var item in Model.Products)
+                        {
+                            <tr>
+                                <td>
+                                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                                    </div>
+                                </td>
+                                <td>
+                                    <p title="@item.Title" class="text-left">@item.Title</p>
+                                </td>
+                                <td>
+                                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 詳情</a>
+                                    @if (Model.Status == "待確認")
+                                    {
+                                        <form action="~/Seller/BarterOrderDetails" method="post">
+                                            <input type="hidden" name="OrderId" value="@Model.OrderId">
+                                            <input type="hidden" name="trade" value="@Model.Trade">
+                                            <input type="hidden" name="ProductId" value="@item.ProductId">
+                                            <button type="submit" class="btn btn-outline-primary p-3 my-1" name="submit" value="接受與此書交換">接受與此書交換</button>
+                                        </form>
+                                    }
+                                </td>
+                            </tr>
+                        }
+                    }
+                    else
                     {
                         <tr>
                             <td>
                                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                                    <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="Empty" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                                 </div>
                             </td>
                             <td>
-                                <p title="@item.Title" class="text-left">@item.Title</p>
+                                <h2 title="沒有商品在列表中" class="text-left">沒有商品在列表中</h2>
                             </td>
                             <td>
-                                <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 詳情</a>
-                                @if (Model.Status == "待確認")
-                                {
-                                    <form action="~/Seller/BarterOrderDetails" method="post">
-                                        <input type="hidden" name="OrderId" value="@Model.OrderId">
-                                        <input type="hidden" name="trade" value="@Model.Trade">
-                                        <input type="hidden" name="ProductId" value="@item.ProductId">
-                                        <button type="submit" class="btn btn-outline-primary p-3 my-1" name="submit" value="接受與此書交換">接受與此書交換</button>
-                                    </form>
-                                }
+                            </td>
+                            <td>
                             </td>
                         </tr>
                     }
-                }
-                else if (Model.Status == "待確認")
-                {
-                    <tr>
-                        <td>
-                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                                <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="Empty" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                            </div>
-                        </td>
-                        <td>
-                            <h2 title="沒有商品在列表中" class="text-left">沒有商品在列表中</h2>
-                        </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+                </tbody>
+            </table>
+        </div>
+    }
 </div>
 @section topCSS{
     <link href="~/css/seller/mysales.css" asp-append-version="true" rel="stylesheet" />
