--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/EditTablePartial.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/EditTablePartial.css
@@ -12,3 +12,31 @@ textarea {
     resize: none;
     overflow-y: hidden;
 }
+.btn-outline-info {
+    background-color: white;
+    color: blue;
+}
+
+.btn-outline-warning {
+    background-color: white;
+    color: orangered;
+}
+
+.btn-outline-danger {
+    background-color: white;
+    color: red;
+}
+
+.btn-outline-secondary {
+    background-color: white;
+    color: gray;
+}
+.btn-outline-primary {
+    background-color: white;
+    color: blue;
+}
+
+.btn-outline-success {
+    background-color: white;
+    color: green;
+}
