--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MySales.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MySales.css
@@ -24,6 +24,15 @@
     background-color: white;
     color: gray;
 }
+.btn-outline-primary {
+    background-color: white;
+    color: blue;
+}
+
+.btn-outline-success {
+    background-color: white;
+    color: green;
+}
 /**/
 .btn-status-custom {
     position: relative;
