--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -20,7 +20,7 @@
                 </div>
                 
                 <button type="submit" class="btn btn-outline-primary mb-2">增至許願井</button>
-                <button onclick="searchByISBN()" type="button">api查詢書籍</button>
+                @*<button onclick="searchByISBN()" type="button">api查詢書籍</button>*@
             </form>
         </div>
         <div class="col-12 col-md-6">
